# 2048-cpp-ai

./: .gitignore  README.md
artifacts/: first_result.txt  metrics.json  ridge_model.json
cpp/: Agent.cpp  Agent.h  Board.cpp  Board.h  CMakeLists.txt  Collector.cpp  Collector.h  DataGenerator.cpp  DataGenerator.h  Evaluators.cpp  Evaluators.h  Game.cpp  Game.h  main.cpp  main_collect_data.cpp  main_compare.cpp
python/: train_models.py
